# stamps

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  db.sqlite3  docker-compose.production.yml  docker-compose.yml  manage.py  poetry_scripts.py  pre-commit  pyproject.toml  requirements.txt  setup.cfg
about/: admin.py  models.py  urls.py  views.py
about/migrations/: 0001_initial.py  0002_post.py  0003_about_delete_post.py  0004_rename_about_contacts.py  0005_rename_contacts_contact.py  0006_delete_contactaddress_delete_contactemail_and_more.py  0007_contact_published_alter_contact_contants_and_more.py  0008_rename_contants_contact_contacts.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: abstract_models.py  mixins.py  tasks.py  views_helpers.py
core/context_processors/: title.py  year.py
docs/: README.md  models.excalidraw  order_window_warframe.excalidraw  poetry_scripts.py  todo.md
infra/: compose.override.yml  compose.prod.yml  compose.yml  infra.md
infra/caddy/: Caddyfile
infra/django/: entrypoint  start  start_dev  start_prod
infra/django/celery-flower/: start
infra/django/celery-worker/: start
infra/requirements/: dev.txt  prod.txt
mainapp/: admin.py  apps.py  forms.py  models.py  signals.py  sitemap.py  urls.py  views.py
mainapp/migrations/: 0001_initial.py  0002_alter_stamp_options_alter_stampgroup_options_and_more.py  0002_remove_fieldstypes_field_re_and_more.py  0002_stamp_price.py  0003_alter_stamp_slug.py  0003_stamp_group.py  0004_alter_group_options_remove_group_description_and_more.py  0005_alter_stamp_group_stamp_unique_title_group.py  0006_fieldstypes_updated_alter_fieldstypes_help_text_and_more.py  0006_group_published_stamp_published.py  0008_alter_fieldstypes_name.py  0009_order.py  0011_remove_groupoffieldstypes_fields_alter_stamp_fields_and_more.py  0012_rename_fields_stamp_form_fields.py  0013_alter_stamp_form_fields.py
mainapp/tests/: test_urls.py
orders/: admin.py  urls.py  views.py
orders/migrations/: 0003_alter_order_comment_alter_order_phone_and_more.py
printy/: admin.py  apps.py  models.py  signals.py  sitemap.py  urls.py  views.py
printy/migrations/: 0001_initial.py  0002_alter_printy_options_alter_printygroup_options.py  0003_alter_printy_slug.py
scripts/: check_migrations.sh  poetry_scripts.py  run_tests.sh
src/about/: apps.py  models.py
src/config/: __init__.py  celery.py  settings.py  urls.py
src/config/splitted_settings/: celery.py  ckeditor.py  constants.py  db.py  email.py  logging.py  sentry.py
src/core/: abstract_models.py  admin.py  mixins.py  selenium_utils.py  tasks.py  utils.py  views.py
src/core/context_processors/: flatpages.py
src/mainapp/: factory.py  models.py  signals.py  tasks.py  views.py
src/mainapp/migrations/: 0001_initial.py  0003_alter_fieldstypes_name.py  0004_alter_groupoffieldstypes_options_and_more.py  0005_alter_fieldstypes_options_fieldstypes_created.py  0007_alter_fieldstypes_options_and_more.py  0010_delete_order.py  0014_alter_stamp_image.py  0015_alter_stampgroup_image.py
src/mainapp/tests/: test_selenium.py  test_urls.py  test_views.py
src/orders/: forms.py  models.py  tasks.py  urls.py  views.py
src/orders/migrations/: 0001_initial.py  0002_rename_text_order_stamp_text_order_comment.py
src/orders/tests/: test_urls.py  (+1 more)
src/printy/: apps.py  factory.py  models.py  signals.py  sitemap.py  urls.py  views.py
src/stamp_fields/: factory.py  models.py
src/templates/: 404.html  base.html  new_order_email.html
stamp_fields/: admin.py  apps.py
stamp_fields/migrations/: 0001_initial.py
stamps/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: ckeditor5.css
templates/: base.html  order_email_template.html
templates/about/: contacts.html
templates/includes/: breadcrumbs.html  footer.html  header.html  paginator.html
templates/mainapp/: card.html  index.html  item_details.html  order_form.html  order_success.html
(+16 files in other folders)
