[tool.poetry]
name = "stamps"
version = "0.1.0"
description = "stamps e-store"
authors = ["Miron Sadykov <MironSadykov@yandex.ru>"]
license = "MIT"
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
python-slugify = "^8.0.1"
sorl-thumbnail = "^12.10.0"
flake8-broken-line = "^1.0.0"
flake8-plugin-utils = "^1.3.3"
flake8-return = "^1.2.0"
django-view-breadcrumbs = "^2.4.1"
pillow = "^10.0.1"
pre-commit = "^3.5.0"
django-ckeditor-5 = "^0.2.10"

[tool.poetry.scripts]
dj = "runserver:djtest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
    \.git
    | venv
    | \.venv
    | _build
    | buck-out
    | build
    | migrations
    | settings
    | wsgi
    | asgi
    | manage
    | \.pyc
    | \.pyo
    | \.pyd
    | \.db
    | \.bak
    | \.swp
    | \.log
    | \.sql
    | \.sqlite3
    | \.sqlite3-journal
    | ^setup\.py
    | ^__init__\.py
)
'''

[tool.isort]
# Шаблон настроек
include_trailing_comma = true
profile = "black"
py_version = 39
skip = [".gitignore", ".dockerignore", "__init__.py"]
skip_glob = [
    "docs/*",
    "**/migrations/*.py",
    "tests/",
    "*/migrations/",
    "venv/",
    "venv/*",
    "*/venv/",
    "env/",
    "static/*",
    "templates/*",
]
